crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__call_indirect__return_call_indirect.snap
---
source: crates/service/tests/diagnostics/typeck/call_indirect.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 6,
          "character": 4
        },
        "end": {
          "line": 6,
          "character": 33
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, i32], found [i32]"
    },
    {
      "range": {
        "start": {
          "line": 6,
          "character": 33
        },
        "end": {
          "line": 6,
          "character": 34
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [], found [f64] at the end",
      "data": [
        72,
        128,
        [
          "f64"
        ]
      ]
    },
    {
      "range": {
        "start": {
          "line": 6,
          "character": 25
        },
        "end": {
          "line": 6,
          "character": 33
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "this result type must match the result type of current function"
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 4
        },
        "end": {
          "line": 9,
          "character": 33
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, i32], found [f32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 8,
                "character": 4
              },
              "end": {
                "line": 8,
                "character": 15
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 33
        },
        "end": {
          "line": 9,
          "character": 34
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [], found [f64] at the end",
      "data": [
        131,
        187,
        [
          "f64"
        ]
      ]
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 25
        },
        "end": {
          "line": 9,
          "character": 33
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "this result type must match the result type of current function"
    },
    {
      "range": {
        "start": {
          "line": 13,
          "character": 4
        },
        "end": {
          "line": 13,
          "character": 35
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, i32], found [i32, f32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 12,
                "character": 4
              },
              "end": {
                "line": 12,
                "character": 15
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 11,
                "character": 4
              },
              "end": {
                "line": 11,
                "character": 15
              }
            }
          },
          "message": "expected type `f32`, found `i32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 13,
          "character": 35
        },
        "end": {
          "line": 13,
          "character": 36
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [], found [f64] at the end",
      "data": [
        190,
        264,
        [
          "f64"
        ]
      ]
    },
    {
      "range": {
        "start": {
          "line": 13,
          "character": 27
        },
        "end": {
          "line": 13,
          "character": 35
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "this result type must match the result type of current function"
    },
    {
      "range": {
        "start": {
          "line": 17,
          "character": 35
        },
        "end": {
          "line": 17,
          "character": 36
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [], found [f64] at the end",
      "data": [
        267,
        341,
        [
          "f64"
        ]
      ]
    },
    {
      "range": {
        "start": {
          "line": 17,
          "character": 27
        },
        "end": {
          "line": 17,
          "character": 35
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "this result type must match the result type of current function"
    }
  ]
}
